@@ -1,0 +1,138 @@
+<planet name="planet">
+  <atmosphere>
+    <component name="porter1" type="porter" worker="localhost">
+      <property name="port">8800</property>
+      <property name="username">me</property>
+      <property name="password">unguessable</property>
+      <property name="socket-path">/tmp/portertest1</property>
+    </component>
+  </atmosphere>
+  <flow name="default">
+    <component name="http-bbc1" worker="localhost" label="http-bbc1" project="flumotion" version="0.5.1.1" type="http-streamer">
+      <eater name="default">
+        <feed alias="default">muxer-bbc1:default</feed>
+      </eater>
+      <property name="mount-point">/bbc1.ogg</property>
+      <property name="client-limit">500</property>
+      <property name="port">8800</property>
+      <property name="type">slave</property>
+      <property name="porter-socket-path">/tmp/portertest1</property>
+      <property name="porter-username">me</property>
+      <property name="porter-password">unguessable</property> 
+
+      <clock-master>false</clock-master>
+      <plugs />
+    </component>
+    <component name="http-bbc2" worker="localhost" label="http-bbc2" project="flumotion" version="0.5.1.1" type="http-streamer">
+      <eater name="default">
+        <feed alias="default">muxer-bbc2:default</feed>
+      </eater>
+      <property name="mount-point">/bbc2.ogg</property>
+      <property name="client-limit">500</property>
+      <property name="port">8800</property>
+      <property name="type">slave</property>
+      <property name="porter-socket-path">/tmp/portertest1</property>
+      <property name="porter-username">me</property>
+      <property name="porter-password">unguessable</property> 
+      <clock-master>false</clock-master>
+      <plugs />
+    </component>
+    <component name="producer-dvb" worker="localhost" label="producer-dvb" project="flumotion" version="0.5.1.1" type="dvb-ts-producer">
+      <property name="dvb-type">T</property>
+      <property name="adapter">1</property>
+      <property name="code-rate-hp">3/4</property>
+      <property name="frequency">505833330</property>
+      <property name="code-rate-lp">3/4</property>
+      <property name="modulation">64</property>
+      <property name="bandwidth">8</property>
+      <property name="trans-mode">2</property>
+      <property name="guard">32</property>
+      <property name="hierarchy">0</property>
+      <property name="program-numbers">4164:4228:4351</property>
+      <plugs />
+    </component>
+    <component name="ts-splitter-bbc1" worker="localhost" label="ts-splitter-bbc1" project="flumotion" version="0.5.1.1" type="mpeg-ts-splitter">
+      <eater name="default">
+        <feed alias="default">producer-dvb:default</feed>
+      </eater>
+      <property name="program-number">4164</property>
+      <plugs />
+    </component>
+    <component name="ts-splitter-bbc2" worker="localhost" label="ts-splitter-bbc2" project="flumotion" version="0.5.1.1" type="mpeg-ts-splitter">
+      <eater name="default">
+        <feed alias="default">producer-dvb:default</feed>
+      </eater>
+      <property name="program-number">4228</property>
+      <plugs />
+    </component>
+    <component name="ts-decoder-bbc1" worker="localhost" label="ts-decoder-bbc1" project="flumotion" version="0.5.1.1" type="mpeg-ts-decoder">
+      <eater name="default">
+        <feed alias="default">ts-splitter-bbc1:default</feed>
+      </eater>
+      <property name="width">160</property>
+      <property name="height">120</property>
+      <property name="framerate">25/2</property>
+      <property name="deinterlacer">ffdeinterlace</property>
+      <property name="program-number">4164</property>
+
+      <plugs />
+    </component>
+
+    <component name="ts-decoder-bbc2" worker="localhost" label="ts-decoder-bbc2" project="flumotion" version="0.5.1.1" type="mpeg-ts-decoder">
+      <eater name="default">
+        <feed alias="default">ts-splitter-bbc2:default</feed>
+      </eater>
+      <property name="width">160</property>
+      <property name="height">120</property>
+      <property name="framerate">25/2</property>
+      <property name="deinterlacer">ffdeinterlace</property>
+      <property name="program-number">4228</property>
+
+      <plugs />
+    </component>
+
+    <component name="encoder-audio-bbc1" worker="localhost" label="encoder-audio-bbc1" type="vorbis-encoder">
+      <eater name="default">
+        <feed alias="default">ts-decoder-bbc1:audio</feed>
+      </eater>
+      <property name="bitrate">64000</property>
+    </component>
+    <component name="encoder-audio-bbc2" worker="localhost" label="encoder-audio-bbc2" type="vorbis-encoder">
+      <eater name="default">
+        <feed alias="default">ts-decoder-bbc2:audio</feed>
+      </eater>
+      <property name="bitrate">64000</property>
+    </component>
+    <component name="encoder-video-bbc1" worker="localhost" label="encoder-video-bbc1" type="theora-encoder">
+      <eater name="default">
+        <feed alias="default">ts-decoder-bbc1:video</feed>
+      </eater>
+      <property name="bitrate">400000</property>
+    </component>
+    <component name="encoder-video-bbc2" worker="localhost" label="encoder-video-bbc2" type="theora-encoder">
+      <eater name="default">
+        <feed alias="default">ts-decoder-bbc2:video</feed>
+      </eater>
+      <property name="bitrate">400000</property>
+    </component>
+
+
+    <component name="muxer-bbc1" worker="localhost" label="muxer-bbc1" project="flumotion" version="0.5.1.1" type="ogg-muxer">
+      <eater name="default">
+        <feed alias="default">encoder-audio-bbc1:default</feed>
+        <feed alias="default">encoder-video-bbc1:default</feed>
+      </eater>
+      <clock-master>false</clock-master>
+      <plugs />
+    </component>
+    <component name="muxer-bbc2" worker="localhost" label="muxer-bbc2" project="flumotion" version="0.5.1.1" type="ogg-muxer">
+      <eater name="default">
+        <feed alias="default">encoder-audio-bbc2:default</feed>
+        <feed alias="default">encoder-video-bbc2:default</feed>
+      </eater>
+      <clock-master>false</clock-master>
+      <plugs />
+    </component>
+
+  </flow>
+</planet>
